<resources>
    <string name="app_name">Iron</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <color name="white">#FFFFFF</color>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>


    <!-- Strings related to Register -->
    <string name="confirm_password">Confirm Password</string>
    <string name="action_create_account">Create Account</string>
    <string name="facebook_application_id" translatable="false">1586347651395365</string>

    <string name="web_client_id">208978703650-t9fn6tc3afkrtlmhd62f4js5oodecim4.apps.googleusercontent.com</string>
    <string name="workout_name_2">Chest and Triceps</string>
    <string name="workout_name_1">Workout A</string>
    <string name="add_workout_title">Workout Name: </string>
    <string name="workout_name">Workout Name</string>
    <string name="ok">OK</string>
    <string name="title_activity_reset_password">Reset Password</string>
    <string name="title_activity_workout">Exercises</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="openDrawer">Open drawer</string>
    <string name="closeDrawer">Close drawer</string>

    <string name="action_settings">Settings</string>

    <string name="add_exercise_title">Exercise Name</string>
    <string name="exercise_name">Exercise</string>
    <string name="title_activity_workout_options">Workout_options</string>
    <string name="title_activity_start_workout">StartWorkoutActivity</string>

</resources>
